# PacMan

./: .gitignore  AISystem.cpp  AISystem.h  AbstractFactory.h  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  Component.h  Config.cpp  Config.h  Entity.h  EventSystem.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  MovementSystem.cpp  MovementSystem.h  PacMan_Components.h  PacMan_Constants.h  PositionSystem.cpp  PositionSystem.h  SDL_Components.h  SDL_EventSystem.cpp  SDL_EventSystem.h  SDL_Factory.cpp  SDL_Factory.h  SDL_RenderSystem.cpp  SDL_RenderSystem.h  SDL_Text.cpp  SDL_Text.h  SDL_TimerSystem.cpp  SDL_TimerSystem.h  System.h  SystemManager.cpp  SystemManager.h  TimerSystem.h  World.cpp  World.h  main.cpp  (+2 more)
ECS/: Component.h  ECS.h  Entity.cpp  Entity.h  System.h  SystemManager.cpp  SystemManager.h
Pathfinding/: A_star.cpp  A_star.h  Node.cpp  Node.h  PathNode.cpp  PathNode.h  Pathfinder.h
SDL_Systems/: SDL_EventSystem.cpp  SDL_EventSystem.h  SDL_RenderSystem.cpp  SDL_RenderSystem.h  SDL_TimerSystem.cpp  SDL_TimerSystem.h
Systems/: AISystem.cpp  AISystem.h  CollisionSystem.cpp  CollisionSystem.h  EventSystem.h  GameplaySystem.cpp  GameplaySystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.h  TimerSystem.h
cmake/: FindSDL2_ttf.cmake
data/: ai.map  collision.map  config.xml  config1.conf  config2.xml  world.map  world2.map
include/: AbstractFactory.h  Config.h  SDL_Factory.h
include/ECS/: System.h  SystemManager.h
include/Pacman/: Game.h  PacMan_Components.h  PacMan_Constants.h  SDL_Components.h  SDL_Text.h  World.h
include/SDL_Systems/: SDL_EventSystem.h  SDL_RenderSystem.h  SDL_TimerSystem.h
include/Systems/: AISystem.h  CollisionSystem.h  EventSystem.h  MovementSystem.h  RenderSystem.h  TimerSystem.h
include/TinyXML/: tinyxml2.cpp  tinyxml2.h
src/: Config.cpp  SDL_Factory.cpp  main.cpp
src/ECS/: Entity.cpp  SystemManager.cpp
src/Pacman/: Game.cpp  SDL_Text.cpp  World.cpp
src/SDL_Systems/: SDL_EventSystem.cpp  SDL_RenderSystem.cpp  SDL_TimerSystem.cpp
src/Systems/: AISystem.cpp  CollisionSystem.cpp  MovementSystem.cpp
